Atualizado spk-padrao.css,spk-alerta, Confirmacao Exclusao